# python-project-52

./: .gitignore  Makefile  README.md  coverage.xml  db.sqlite3  pyproject.toml
.github/workflows/: main.yml  python_ci.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: common_views_services.py  forms.py  mixins.py  settings.py  urls.py  validator.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_status_created_at.py  0003_alter_status_name.py
task_manager/tags/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/tags/migrations/: 0001_initial.py  0002_alter_tag_name.py
task_manager/task_manager/: settings.py  urls.py
task_manager/tasks/: filter.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  delete.html  index.html  login.html  signup.html  update.html  users.html
task_manager/templates/labels/: label_delete.html  label_form.html  labels_list.html
task_manager/templates/statuses/: status_delete.html  status_form.html  statuses_list.html
task_manager/templates/tags/: tag_delete.html  tag_form.html  (+1 more)
task_manager/tests/: test_labels_crud.py  test_statuses_crud.py  test_tags_crud.py  test_tasks_crud.py  test_tasks_filter.py  test_user_crud.py
task_manager/users/: forms.py  mixins.py  models.py  urls.py  validator.py  views.py  views_services.py
(+12 files in other folders)
