[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sayat Aubakirov <sayat_aubakirov@mail.ru>"]
readme = "README.md"
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.1.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
