[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sayat Aubakirov <sayat_aubakirov@mail.ru>"]
readme = "README.md"
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.1.1"
python-dotenv = "^1.0.1"
django-bootstrap5 = "^24.3"
django-filter = "^24.3"
dj-database-url = "^2.3.0"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
rollbar = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
